# stock_picker

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt
output/: trending_companies.json
output/03-04-2026/: decision.md  research_report.json  trending_companies.json
src/stock_picker_agent/: crew.py  main.py
src/stock_picker_agent/config/: agents.yaml  tasks.yaml
src/stock_picker_agent/tools/: utils.py
